# conversation-canvas

./: .gitignore  Conversation_Canvas_对话画布设计方案.docx  README.md  create_docx.py  package-lock.json  package.json  vite.config.js  对话画布使用说明.docx  对话画布反馈问卷.docx  生成使用说明.py  生成反馈问卷.py
docs/: Day3代码审查报告.md  Day4-5代码审查报告.md  代码审查报告.md  任务报告.md  开发文档.md  开发日志.md  综合审计报告.md  项目决策.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs  mcp_client.rs
src/lib/canvas/: FileProductNode.js  ModelConfigNode.js  PromptNode.js  ResponseNode.js  ThinkingNode.js  ToolCallNode.js  ToolResultNode.js  agent.js  chat.js  init.js  io.js  widgets.js
src/lib/components/: AgentLog.svelte  BottomInput.svelte  FilePreview.svelte  FileTree.svelte  GuideDialog.svelte  McpManager.svelte  SetupDialog.svelte  TextEditModal.svelte  treeNode.svelte
src/lib/services/: textEditService.js
src/lib/stores/: app.js  config.js
src/lib/tools/: index.js
src/routes/: +page.svelte
src/routes/api/agent/: +server.js
src/routes/api/chat/: +server.js
src/routes/api/open/: +server.js
