[package]
name = "conversation-canvas"
version = "0.1.0"
edition = "2021"

[package.metadata]
icon = "icons/icon.ico"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
dirs = "6"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "conversation_canvas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
